--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
 		"noEmit": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
-		"moduleResolution": "node16"
+		"moduleResolution": "node16",
+		"resolveJsonModule": true
 	}
 }
