--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,12 @@
 		"dev": "tsx watch src/index.ts"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.15.0",
 		"h3": "^2.0.0-beta.0"
 	},
 	"devDependencies": {
 		"@types/node": "^24.0.1",
+		"prisma": "^6.15.0",
 		"tsx": "^4.20.3"
 	}
 }
