chore: enable TypeScript option `verbatimModuleSyntax`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
 		"skipLibCheck": true,
 		"moduleResolution": "node16",
 		"resolveJsonModule": true,
-		"allowImportingTsExtensions": true
+		"allowImportingTsExtensions": true,
+		"verbatimModuleSyntax": true
 	}
 }
